<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@color/gray_bg"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/slide_header_bg"
            android:layout_height="180dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/slide_menu_user"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@drawable/slide_user"
               />
            <TextView
                android:id="@+id/slide_menu_name"
                android:text="Veer"
                android:layout_below="@+id/slide_menu_user"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            style="@style/slide_menu_sec_rl">

            <ImageView
                android:id="@+id/topmenu_icn_1"
                style="@style/slide_menu_icn"
                android:src="@drawable/topmenu_icn_msg"/>
            <TextView
                style="@style/slide_menu_text"
                android:layout_toRightOf="@+id/topmenu_icn_1"
                android:text="@string/slide_menu_mymsg"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/slide_menu_sec_rl">
            <ImageView
                android:id="@+id/topmenu_icn_2"
                style="@style/slide_menu_icn"
                android:src="@drawable/topmenu_icn_member"/>
            <TextView
                style="@style/slide_menu_text"
                android:layout_toRightOf="@+id/topmenu_icn_2"
                android:text="@string/slide_menu_member"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/slide_menu_sec_rl">
            <ImageView
                android:id="@+id/topmenu_icn_3"
                style="@style/slide_menu_icn"
                android:src="@drawable/topmenu_icn_store"/>
            <TextView
                style="@style/slide_menu_text"
                android:layout_toRightOf="@+id/topmenu_icn_3"
                android:text="@string/slide_menu_shopping"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/slide_menu_sec_rl">
            <ImageView
                android:id="@+id/topmenu_icn_4"
                style="@style/slide_menu_icn"
                android:src="@drawable/topmenu_icn_cloud"/>
            <TextView
                style="@style/slide_menu_text"
                android:layout_toRightOf="@+id/topmenu_icn_4"
                android:text="@string/slide_menu_cloud"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/slide_menu_sec_rl">
            <ImageView
                android:id="@+id/topmenu_icn_5"
                style="@style/slide_menu_icn"
                android:src="@drawable/topmenu_icn_identify"/>
            <TextView
                style="@style/slide_menu_text"
                android:layout_toRightOf="@+id/topmenu_icn_5"
                android:text="@string/slide_menu_listen"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/slide_menu_sec_rl">
            <ImageView
                android:id="@+id/topmenu_icn_6"
                style="@style/slide_menu_icn"
                android:src="@drawable/topmenu_icn_level"/>
            <TextView
                style="@style/slide_menu_text"
                android:layout_toRightOf="@+id/topmenu_icn_6"
                android:text="@string/slide_menu_skin"/>
        </RelativeLayout>
        <RelativeLayout
            style="@style/slide_menu_sec_rl">
            <ImageView
                android:id="@+id/topmenu_icn_7"
                style="@style/slide_menu_icn"
                android:src="@drawable/topmenu_icn_time"/>
            <TextView
                style="@style/slide_menu_text"
                android:layout_toRightOf="@+id/topmenu_icn_7"
                android:text="@string/slide_menu_timing"/>
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/slide_menu_setting"
            android:gravity="center"
            style="@style/slide_menu_text"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <View
            android:layout_width="0.1dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_height="match_parent"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/slide_menu_exit"
            android:gravity="center"
            style="@style/slide_menu_text"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
